@@ -1,3 +1,9 @@
+20030520
+ - (djm) OpenBSD CVS Sync
+   - deraadt@cvs.openbsd.org 2003/05/18 23:22:01
+     [log.c]
+     use syslog_r() in a signal handler called place; markus ok
+
 20030519
  - (djm) Sync auth-pam.h with what we actually implement
 
